[gd_scene load_steps=13 format=3 uid="uid://crdyb730kx4i6"]

[ext_resource type="AudioStream" uid="uid://djppdmrprgq46" path="res://sounds/explosion1.mp3" id="2_5bmrn"]
[ext_resource type="Script" path="res://scripts/Fireball.gd" id="9_bhtwy"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_n8pnu"]
load_path = "res://.godot/imported/B500-2.PNG-40a7f8dd8ca2ad4a689847039eacde61.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_fxjar"]
load_path = "res://.godot/imported/B500-3.PNG-e4029b18b10e27875c36f6b9061c66b1.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_rrl6c"]
load_path = "res://.godot/imported/B500-4.PNG-5115810b0eb3cd89ad6374a63bb73f5f.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_xyiht"]
load_path = "res://.godot/imported/FB500-1.png-9c70b175787aa3f3f63439e3721dae55.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_0svw6"]
load_path = "res://.godot/imported/FB500-2.png-e2f0ee99382ce659099a5e41963d2389.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_7oof0"]
load_path = "res://.godot/imported/FB500-3.png-6a867f79225d019b3325df320d2c4f8e.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_2md7n"]
load_path = "res://.godot/imported/FB500-4.png-8b2203f48508739ee59d73af7e71d86e.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_g7a33"]
load_path = "res://.godot/imported/FB500-5.png-953743ba467177afe3077f7bc7e52e2d.ctex"

[sub_resource type="SpriteFrames" id="SpriteFrames_ism8b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_n8pnu")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_fxjar")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_rrl6c")
}],
"loop": false,
"name": &"explode",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_xyiht")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_0svw6")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_7oof0")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_2md7n")
}, {
"duration": 1.0,
"texture": SubResource("CompressedTexture2D_g7a33")
}],
"loop": true,
"name": &"moving",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_yh7lr"]
radius = 157.153

[node name="Fireball" type="AnimatedSprite2D"]
rotation = 1.5708
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_ism8b")
animation = &"moving"
script = ExtResource("9_bhtwy")

[node name="Area" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 21

[node name="Collider" type="CollisionShape2D" parent="Area"]
position = Vector2(-11, -1)
shape = SubResource("CircleShape2D_yh7lr")

[node name="AliveTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[node name="Explosion_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_5bmrn")
volume_db = 1.0
attenuation = 2.92817

[connection signal="animation_finished" from="." to="." method="_on_animation_finished"]
[connection signal="area_entered" from="Area" to="." method="_on_area_entered"]
[connection signal="body_entered" from="Area" to="." method="_on_body_entered"]
[connection signal="timeout" from="AliveTimer" to="." method="_on_alive_timer_timeout"]
[connection signal="finished" from="Explosion_Sound" to="." method="_explosion_finished"]
